Bug fix on small grid Updated grid samples

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -301,7 +301,7 @@
 
   .colr {
     float: right;
-    margin: 0 15px;
+    margin: 0 10px;
   }
 
   .alpha {
@@ -591,6 +591,7 @@
   }
 
   .full-small {
+    float: none;
     margin: 0;
     padding: 0 10px;
     width: 100%;
