--- a/scss/large/_xl.scss
+++ b/scss/large/_xl.scss
@@ -50,7 +50,7 @@ $wrap: $xl-col-width * 12 + $xl-gutter * 11;
 // * Grid utilities
 .colr {
   float: right;
-  margin: 0 $xl-gutter/2;
+  margin: 0 $gutter/2;
 }
 
 .alpha {
