--- a/scss/small/_base.scss
+++ b/scss/small/_base.scss
@@ -60,6 +60,7 @@
 }
 
 .full-small {
+  float: none;
   margin: 0;
   padding: 0 10px;
   width: 100%;
